Fixed some JDBC and JMS stuff